--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -1,10 +1,23 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
+  <!-- 
+    file        : CHANGELOG.html
+    created     : Tue Mar  4 19:21:10 CET 2003
+    copyright   : (C) 2003 by Eric Espié                         
+    email       : Eric.Espie@torcs.org   
+    version     : $Id$                                  
+  -->
+
+  <!--    This program is free software; you can redistribute it and/or modify  -->
+  <!--    it under the terms of the GNU General Public License as published by  -->
+  <!--    the Free Software Foundation; either version 2 of the License, or     -->
+  <!--    (at your option) any later version.                                   -->
+
   <head>
     <title>TORCS Changelog</title>
   </head>
   <body>
-    <hr noshade="noshade" size="2" width="100%">
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
     <h1>Version 1.2.0</h1>
 
@@ -13,14 +26,21 @@
       <li><b>True full screen mode for windows.</b></li>
     </ul>
 
-    <h3>Graphic:</h3><ul>
+    <h3>Graphic:</h3>
+    <ul>
       <li><b>Inside view camera fixed.</b></li>
       <li><b>Lighting enabled (by Christophe)</b></li>
       <li><b>Objects strips and normals recalculated (by Christophe)</b></li>
       <li><b>Multitexturing (by Christophe)</b></li>
     </ul>
 
-    <hr noshade="noshade" size="2" width="100%">
+    <h3>Races</h3>
+    <ul>
+      <li><b>Qualifications</b></li>
+      <li><b>Points and standings</b></li>
+      <li><b>Championship</b></li>
+    </ul>
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
 
     <h1>Version 1.1.0a</h1>
@@ -30,7 +50,7 @@
       <li><b>Configuration for PLIB 1.5 updated.</b></li>
     </ul>
 
-    <hr noshade="noshade" size="2" width="100%">
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
     <h1>Version 1.1.0 codename Titouan:</h1>
 
@@ -106,7 +126,7 @@
       <li><b>see <a href="http://www.sf.net/projects/torcs">the project on SourceForge</a> for all the bugs.</b></li>
     </ul>
 
-    <hr noshade="noshade" size="2" width="100%">
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
  
     <h1>Version 1.0.0:</h1>
@@ -153,7 +173,10 @@
       <li>see <a href="http://www.sf.net/projects/torcs">the project on SourceForge</a> for all the bugs.</li>
     </ul>
 
-    <hr noshade="noshade" size="2" width="100%">
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
+<!-- hhmts start -->
+Last modified: Tue Mar  4 19:24:40 CET 2003
+<!-- hhmts end -->
   </body>
 </html>
