--- a/torcs/torcs/TODO.html
+++ b/torcs/torcs/TODO.html
@@ -1,5 +1,17 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
+  <!-- 
+    file        : TODO.html
+    created     : Tue Mar  4 19:19:47 CET 2003
+    copyright   : (C) 2003 by Eric Espié                         
+    email       : Eric.Espie@torcs.org   
+    version     : $Id$                                  
+  -->
+
+  <!--    This program is free software; you can redistribute it and/or modify  -->
+  <!--    it under the terms of the GNU General Public License as published by  -->
+  <!--    the Free Software Foundation; either version 2 of the License, or     -->
+  <!--    (at your option) any later version.                                   -->
   <head>
     <title>TORCS TO-DO List</title>
   </head>
@@ -13,7 +25,6 @@
     <h3>Graphic:</h3><ul>
       <li><b>Drivers name above the cars</b></li>
       <li><b>Mirors</b></li>
-      <li><b>Fuel and dammage gauges on the dashboard</b></li>
       <li><b>Camera and focus preselected when human player is racing</b></li>
       <li><b>Non rotating camera type around the track</b></li>
     </ul>
@@ -33,42 +44,12 @@
 
     <h3>Race Management:</h3>
     <ul>
-      <li><b>New race engine more generic to let the race managers modules concentrate on the race rules</b></li>
       <li><b>VCR</b></li>
       <li><b>Network mode</b></li>
       <li><b>Pace car</b></li>
       <li><b>Start procedures</b></li>
       <li><b>Intermediate time around the track</b></li>
       <li><b>Limited time events and/or limited laps (qualifications, endurance races...)</b></li>
-
-      <li><b>Customisable races:</b>
-	<ul>
-	  <li>Qualif type</li>
-	  <li>Number of rounds</li>
-	  <li>Starting order for the rounds:
-	    <ul>
-	      <li>last round arrival order (including qualifs)</li>
-	      <li>last round arrival order inverted</li>
-	    </ul>
-	  </li>
-	  <li>pits order:
-	    <ul>
-	      <li>Qualifs standings</li>
-	      <li>Race numbers</li>
-	      <li>last season results</li>
-	    </ul>
-	  </li>
-	  <li>Use of Pace-Car during race to group the cars, or for accidents</li>
-	</ul>
-      </li>
-
-      <li><b>Drivers categories:</b>
-	<ul>
-	  <li><b>Rookie</b>: no dammages, no specific rules, no pit stops, high adherence...</li>
-	  <li><b>Amateur</b>: limited dammages, pit stops, medium adherence...</li>
-	  <li><b>Pro</b>: full dammages, full rules, pit stops, low adherence...</li>
-	</ul>
-      </li>
 
       <li><b>Race Rules:</b>
 	<ul>
@@ -87,9 +68,12 @@
     <ul>
       <li><b>Non circuit type</b></li>
       <li><b>Free borders</b></li>
-      <li><b>Track compiler and optimizer (work in progress)</b></li>
+      <li><b>Track editor (work in progress)</b></li>
     </ul>
 
     <hr noshade="noshade" size="2" width="100%">
+<!-- hhmts start -->
+Last modified: Tue Mar  4 19:20:29 CET 2003
+<!-- hhmts end -->
   </body>
-<//html>
+</html>
