--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -23,7 +23,8 @@
 
     <h3>Display:</h3>
     <ul>
-      <li><b>True full screen mode for windows.</b></li>
+      <li><b>True full screen mode for Windows.</b></li>
+      <li><b>Full screen mode for Linux (partly working).</b></li>
     </ul>
 
     <h3>Graphic:</h3>
@@ -32,6 +33,7 @@
       <li><b>Lighting enabled (by Christophe)</b></li>
       <li><b>Objects strips and normals recalculated (by Christophe)</b></li>
       <li><b>Multitexturing (by Christophe)</b></li>
+      <li><b>LOD on the cars based on the size on the screen.</b></li>
     </ul>
 
     <h3>Races</h3>
@@ -40,8 +42,17 @@
       <li><b>Points and standings</b></li>
       <li><b>Championship</b></li>
     </ul>
-    <hr noshade="noshade" size="2" width="100%"></hr>
 
+    <h3>Controls:</h3>
+    <ul>
+      <li><b>Configuration and calibration screens for mouse control.</b></li>
+    </ul>
+
+    <h3>Tracks:</h3>
+    <ul>
+      <li><b>Super Cool g-track-3 from Christophe.</b></li>
+    </ul>
+    <hr noshade="noshade" size="2" width="100%"></hr>
 
     <h1>Version 1.1.0a</h1>
 
@@ -176,7 +187,7 @@
     <hr noshade="noshade" size="2" width="100%"></hr>
 
 <!-- hhmts start -->
-Last modified: Tue Mar  4 19:24:40 CET 2003
+Last modified: Sun Mar 23 21:36:03 CET 2003
 <!-- hhmts end -->
   </body>
 </html>
