--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -19,6 +19,14 @@
   <body>
     <hr noshade="noshade" size="2" width="100%"></hr>
 
+    <h1>Version 1.2.1</h1>
+
+    <h3>Control:</h3>
+    <ul>
+      <li><b>Keyboard control now available.</b></li>
+    </ul>
+    <hr noshade="noshade" size="2" width="100%"></hr>
+
     <h1>Version 1.2.0</h1>
 
     <h3>Display:</h3>
@@ -187,7 +195,7 @@
     <hr noshade="noshade" size="2" width="100%"></hr>
 
 <!-- hhmts start -->
-Last modified: Sun Mar 23 21:36:03 CET 2003
+Last modified: Sat Apr 19 11:43:57 CEST 2003
 <!-- hhmts end -->
   </body>
 </html>
