--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -19,6 +19,34 @@
   <body>
     <hr noshade="noshade" size="2" width="100%"></hr>
 
+    <h1>Version 1.2.2</h1>
+
+    <h3>Graphic:</h3>
+    <ul>
+      <li><b>Multiplayer mode with split screen (up to 4 players)</b></li>
+      <li><b>Mirror for driver's views (Thanks to <a href="mailto:p.leoncini--at--cira.it">Paolo Leoncini</a> for his explanations on PLIB mailing list)</b></li>
+    </ul>
+
+    <h3>Control:</h3>
+    <ul>
+      <li><b>Support for multiple joysticks</b></li>
+      <li><b>Separate control configuration by player</b></li>
+    </ul>
+
+    <h3>Tracks:</h3>
+    <ul>
+      <li><b>New track (unfinished) "Spring"</b></li>
+      <li><b>Modified versions of e-track-4, e-track-6 and mixed-1</b></li>
+    </ul>
+
+    <h3>Cars:</h3>
+    <ul>
+      <li><b>K/Cendra cars packs with cool 60's cars</b></li>
+      <li><b>406 Peugeot</b></li>
+    </ul>
+
+    <hr noshade="noshade" size="2" width="100%"></hr>
+
     <h1>Version 1.2.1</h1>
 
     <h3>Control:</h3>
@@ -195,7 +223,7 @@
     <hr noshade="noshade" size="2" width="100%"></hr>
 
 <!-- hhmts start -->
-Last modified: Sat Apr 19 11:43:57 CEST 2003
+Last modified: Fri Aug 29 22:56:44 CEST 2003
 <!-- hhmts end -->
   </body>
 </html>
