--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -19,12 +19,22 @@
   <body>
     <hr noshade="noshade" size="2" width="100%"></hr>
 
+    <h1>Version 1.3.0</h1>
+
+    <h3>Simulation</h3>
+    <ul>
+      <li><b>Full 3D mode</b></li>
+    </ul>
+
+    <hr noshade="noshade" size="2" width="100%"></hr>
+
     <h1>Version 1.2.2</h1>
 
     <h3>Graphic:</h3>
     <ul>
       <li><b>Multiplayer mode with split screen (up to 4 players)</b></li>
       <li><b>Mirror for driver's views (Thanks to <a href="mailto:p.leoncini--at--cira.it">Paolo Leoncini</a> for his explanations on PLIB mailing list)</b></li>
+      <li><b>in game map view</b></li>
     </ul>
 
     <h3>Control:</h3>
@@ -36,7 +46,7 @@
     <h3>Tracks:</h3>
     <ul>
       <li><b>New track (unfinished) "Spring"</b></li>
-      <li><b>Modified versions of e-track-4, e-track-6 and mixed-1</b></li>
+      <li><b>Modified versions of e-track-4, e-track-6, mixed-1 and alpine-1</b></li>
     </ul>
 
     <h3>Cars:</h3>
@@ -223,7 +233,7 @@
     <hr noshade="noshade" size="2" width="100%"></hr>
 
 <!-- hhmts start -->
-Last modified: Fri Aug 29 22:56:44 CEST 2003
+Last modified: Sun Feb 22 12:25:03 CET 2004
 <!-- hhmts end -->
   </body>
 </html>
